--- a/interfaces/AW-App/src/theme/variables.scss
+++ b/interfaces/AW-App/src/theme/variables.scss
@@ -1,3 +1,7 @@
+// Colors are aligned between AW-App and PA-App
+// See: /interfaces/AW-App/src/theme/variables.scss
+// See: /interfaces/PA-App/src/theme/variables.scss
+
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
