--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -12,7 +12,6 @@
 
     <ion-tab-button tab="tab1"
                     disabled
-                    color="primary"
                     layout="label-hide"
                     [title]="'tabs.community'|translate"
     >
@@ -20,7 +19,8 @@
       <ion-label>{{ 'tabs.community'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button disabled
+    <ion-tab-button tab="tab2"
+                    disabled
                     layout="label-hide"
     >
       <ion-label></ion-label>
