AB#1888 actions in activePhase+disable phaseReady

--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -71,6 +71,7 @@
         ></app-phase-next>
         
         <app-program-people-affected [selectedPhase]="selectedPhase"
+                                     [activePhase]="activePhase"
                                      [programId]="program?.id"
                                      [userRole]="currentUserRole"
         ></app-program-people-affected>
