--- a/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
@@ -16,7 +16,7 @@
             {{ installment.installmentDate|date:"dd-MM-y" }}
           </ion-label>
         </p>
-        <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager">
+        <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer">
           <ion-label position="stacked">
             {{ 'page.program.program-details.fixedTransferValue'|translate }}
           </ion-label>
@@ -31,7 +31,7 @@
           ></ion-input>
         </ion-item>
     
-        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager"
+        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer"
                         (confirm)="performPayout(installment); installment.isInProgress = true"
                         (cancel)="cancelPayout(installment)"
                         [subHeader]="'page.programs.program-payout.total-amount'|translate"
