--- a/interfaces/AW-App/src/theme/variables.scss
+++ b/interfaces/AW-App/src/theme/variables.scss
@@ -8,7 +8,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #2f4bfd;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
