Add hidden submit, to enable "enter-to-submit" for "add-aidworker"

--- a/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
+++ b/interfaces/HO-Portal/src/app/program/manage-aidworkers/manage-aidworkers.component.html
@@ -36,6 +36,7 @@
   <h4>{{ 'page.program.manage-aidworkers.create-aidworker'|translate }}</h4>
 
   <form (ngSubmit)="addAidworker()">
+    <input type="submit" hidden /><!-- Include hidden submit-button to enable "enter"-key to trigger ngSubmit -->
     <ion-row class="ion-align-items-center">
       <ion-item>
         <ion-label position="stacked">
