Remove deprecated attribute

--- a/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
+++ b/interfaces/PA-App/src/app/personal-components/meeting-reminder/meeting-reminder.component.html
@@ -53,9 +53,7 @@
          margin-vertical
          style="margin: 1em auto; max-width: 360px; padding: 1em; background: white;"
     >
-      <qrcode [qrdata]="qrDataString"
-              level="H"
-      ></qrcode>
+      <qrcode [qrdata]="qrDataString"></qrcode>
     </div>
   </dialogue-turn>
   <dialogue-turn [actor]="program?.ngo"
