Create components intergration AB#2117

--- a/interfaces/AW-App/src/app/validation-components/upload-data/upload-data.component.html
+++ b/interfaces/AW-App/src/app/validation-components/upload-data/upload-data.component.html
@@ -1,3 +1,5 @@
-<p>
-  upload-data works!
-</p>
+<section>
+  <dialogue-turn>
+    {{ 'validation.upload-data.uploading'|translate }}
+  </dialogue-turn>
+</section>
