--- a/interfaces/PA-App/src/theme/variables.scss
+++ b/interfaces/PA-App/src/theme/variables.scss
@@ -56,11 +56,11 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #001e60;;
+  --ion-color-dark: #001e60;
   --ion-color-dark-rgb: 0, 30, 96;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #001138;;
+  --ion-color-dark-shade: #001138;
   --ion-color-dark-tint: #002370;
 
   /** medium **/
