--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -1,7 +1,17 @@
 <ion-grid>
   <ion-row>
     <ion-col size="2">
-      [{{ 'header.home'|translate }}]
+      <ion-button
+        [title]="'header.home'|translate"
+        [attr.ariaLabel]="'header.home'|translate"
+        routerLink="/home"
+        routerDirection="root"
+        fill="clear"
+        size="small"
+        color="medium"
+      >
+        <ion-icon name="home" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-col>
     <ion-col>
       <h1 class="ion-no-margin">
