--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -18,8 +18,8 @@
         {{ title }}
       </h1>
     </ion-col>
-    <ion-col size="4" class="ion-text-right">
-      [ UserState ]
+    <ion-col class="ion-text-right">
+      <app-user-state></app-user-state>
     </ion-col>
   </ion-row>
   <ion-row>
