--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <ion-col size="2">
       <ion-button
         [title]="'header.home'|translate"
-        [attr.ariaLabel]="'header.home'|translate"
+        [attr.aria-label]="'header.home'|translate"
         routerLink="/home"
         routerDirection="root"
         fill="clear"
