--- a/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
+++ b/interfaces/HO-Portal/src/app/program/metrics/metrics.component.html
@@ -40,7 +40,7 @@
                 fill="clear"
                 color="medium"
                 [title]="'common.update'|translate"
-                [aria-label]="'common.update'|translate"
+                [attr.aria-label]="'common.update'|translate"
                 (click)="update()"
                 id="metrics-update"
     >
