AB#2151 Move Metrics-component to Dashboard-page

--- a/interfaces/HO-Portal/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/HO-Portal/src/app/pages/dashboard/dashboard.page.html
@@ -7,4 +7,12 @@
 <ion-content class="ion-padding">
 
 
+  <div style="max-width: 33em; margin: auto;">
+    <app-metrics
+      [isCollapsed]="false"
+      [program]="program"
+    ></app-metrics>
+  </div>
+
+
 </ion-content>
