AB#2143 Include ManageAidWorkersComponent into AidWorkersPage

--- a/interfaces/HO-Portal/src/app/pages/aid-workers/aid-workers.page.html
+++ b/interfaces/HO-Portal/src/app/pages/aid-workers/aid-workers.page.html
@@ -6,6 +6,10 @@
 
 <ion-content class="ion-padding">
 
-<pre>[manage-aidworkers]</pre>
+  <app-manage-aidworkers
+    [programId]="programId"
+    [userRole]="userRole"
+    selectedPhase="design"
+  ></app-manage-aidworkers>
 
 </ion-content>
