AB#2143 Cleanup ManageAidWorkersComponent
- Move authentication to AuthGuard
- remove "visibleInPhase"-logic

--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -34,6 +34,7 @@
         {{ 'header.dashboard'|translate }}
       </ion-button>
       <ion-button
+        [disabled]="!showManageAidworkers"
         [routerLink]="['/program', programId, 'aid-workers']"
         routerDirection="root"
         routerLinkActive
