Fix log-out button to really log-out

--- a/interfaces/HO-Portal/src/app/components/user-state/user-state.component.html
+++ b/interfaces/HO-Portal/src/app/components/user-state/user-state.component.html
@@ -10,9 +10,10 @@
 <ion-button
   type="button"
   [title]="'user-state.log-out'|translate"
-  [attr.ariaLabel]="'user-state.log-out'|translate"
+  [attr.aria-label]="'user-state.log-out'|translate"
   size="small"
   fill="clear"
+  (click)="doLogout()"
 >
   <span class="ion-hide-sm-down">{{ 'user-state.log-out'|translate }}</span>
   <ion-icon name="log-out" slot="end"></ion-icon>
