AB#2147 Add ReviewInclusion-page

--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -60,7 +60,16 @@
         </ion-button>
         [{{ 'header.registration-validation'|translate }}]
         [{{ 'header.inclusion'|translate }}]
-        [{{ 'header.review-inclusion'|translate }}]
+        <ion-button
+          [routerLink]="['/program', programId, 'review-inclusion']"
+          routerDirection="root"
+          routerLinkActive
+          #rlaReviewInclusion="routerLinkActive"
+          [fill]=" rlaReviewInclusion.isActive ? 'solid' : 'outline'"
+        >
+          {{ 'header.review-inclusion'|translate }}
+        </ion-button>
+
         [{{ 'header.payment'|translate }}]
         <ion-button
           [routerLink]="['/program', programId, 'evaluation']"
