AB#2148 Add Payment-page

--- a/interfaces/HO-Portal/src/app/components/header/header.component.html
+++ b/interfaces/HO-Portal/src/app/components/header/header.component.html
@@ -69,8 +69,15 @@
         >
           {{ 'header.review-inclusion'|translate }}
         </ion-button>
-
-        [{{ 'header.payment'|translate }}]
+        <ion-button
+          [routerLink]="['/program', programId, 'payment']"
+          routerDirection="root"
+          routerLinkActive
+          #rlaPayment="routerLinkActive"
+          [fill]=" rlaPayment.isActive ? 'solid' : 'outline'"
+        >
+          {{ 'header.payment'|translate }}
+        </ion-button>
         <ion-button
           [routerLink]="['/program', programId, 'evaluation']"
           routerDirection="root"
