AB#2148 Move ProgramPayout-component into Payment-page

--- a/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
+++ b/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
@@ -6,4 +6,8 @@
 
 <ion-content class="ion-padding">
 
+  <app-program-payout
+    [programId]="programId"
+  ></app-program-payout>
+
 </ion-content>
