--- a/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
@@ -1,62 +1,70 @@
-<section *ngIf="componentVisible">
-  <h2>{{ 'page.program.program-payout.section-title'|translate }}</h2>
-  
-  <form>
-    <ion-item *ngFor="let installment of installments">
-      <ion-row class="ion-align-items-center">
-        <p>
-          {{ 'page.program.program-payout.installment-nr'|translate }} {{installment.id}}
-          <ion-label *ngIf="installment.statusOpen" position="stacked">
-            {{ 'page.program.program-payout.open'|translate }}
-          </ion-label>
-          <ion-label *ngIf="!installment.statusOpen" position="stacked">
-            {{ 'page.program.program-payout.closed'|translate }}
-          </ion-label>
-          <ion-label position="stacked">
-            {{ installment.installmentDate|date:"dd-MM-y" }}
-          </ion-label>
-        </p>
-        <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer">
-          <ion-label position="stacked">
-            {{ 'page.program.program-details.fixedTransferValue'|translate }}
-          </ion-label>
-          <ion-input type="number"
-                    inputmode="decimal"
-                    min="0"
-                    required
-                    [(ngModel)]="installment.amount"
-                    [ngModelOptions]="{standalone: true}"
-                    ngDefaultControl
-                    (change)="updateTotalAmountMessage(installment)"
-          ></ion-input>
-        </ion-item>
-    
-        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer"
-                        (confirm)="performPayout(installment); installment.isInProgress = true"
-                        (cancel)="cancelPayout(installment)"
-                        [subHeader]="'page.program.program-payout.total-amount'|translate"
-                        [message]="confirmMessage"
-        >
-          {{ 'page.program.program-payout.start-payout'|translate }}
-        </confirm-prompt>
-        <ion-button [disabled]="currentUserRole !== userRoleEnum.ProgramManager || !installment.isExportAvailable"
-                    (click)="exportList(installment)"
-        >
-          {{ 'page.program.program-payout.export-list'|translate }}
-        </ion-button>
-        <ion-label
-          *ngIf="totalIncluded === 0 && installment.firstOpen"
-          position="stacked"
-        >
-          {{ 'page.program.program-payout.none-included'|translate }}
-        </ion-label>
-    
-        <ion-spinner *ngIf="installment.isInProgress"
-                    color="primary"
-                    class="ion-margin-start"
-        ></ion-spinner>
-      </ion-row>
-    </ion-item>
-  </form>
+<h2>{{ 'page.program.program-payout.section-title'|translate }}</h2>
 
-</section>
+<form>
+  <ion-item *ngFor="let installment of installments">
+    <ion-row class="ion-align-items-center">
+      <p>
+        {{ 'page.program.program-payout.installment-nr'|translate }} {{installment.id}}
+        <br>
+        <ion-note *ngIf="installment.statusOpen">
+          {{ 'page.program.program-payout.open'|translate }}
+        </ion-note>
+        <ion-note *ngIf="!installment.statusOpen">
+          {{ 'page.program.program-payout.closed'|translate }}
+        </ion-note>
+        <br>
+        <ion-note>
+          {{ installment.installmentDate|date:"dd-MM-y" }}
+        </ion-note>
+      </p>
+      <ion-item
+        [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer"
+        class="ion-margin-end"
+      >
+        <ion-label position="stacked">
+          {{ 'page.program.program-details.fixedTransferValue'|translate }}
+        </ion-label>
+        <ion-input
+          type="number"
+          inputmode="decimal"
+          min="0"
+          required
+          [(ngModel)]="installment.amount"
+          [ngModelOptions]="{ standalone: true }"
+          ngDefaultControl
+          (change)="updateTotalAmountMessage(installment)"
+        ></ion-input>
+      </ion-item>
+
+      <confirm-prompt
+        [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProjectOfficer"
+        (confirm)="performPayout(installment); installment.isInProgress = true"
+        (cancel)="cancelPayout(installment)"
+        [subHeader]="'page.program.program-payout.total-amount'|translate"
+        [message]="confirmMessage"
+      >
+        {{ 'page.program.program-payout.start-payout'|translate }}
+      </confirm-prompt>
+      <ion-button
+        [disabled]="currentUserRole !== userRoleEnum.ProgramManager || !installment.isExportAvailable"
+        (click)="exportList(installment)"
+      >
+        <ion-icon name="download" slot="start"></ion-icon>
+        {{ 'page.program.program-payout.export-list'|translate }}
+      </ion-button>
+
+      <ion-note
+        *ngIf="totalIncluded === 0 && installment.firstOpen"
+        class="ion-margin-start"
+      >
+        {{ 'page.program.program-payout.none-included'|translate }}
+      </ion-note>
+
+      <ion-spinner
+        *ngIf="installment.isInProgress"
+        color="primary"
+        class="ion-margin-start"
+      ></ion-spinner>
+    </ion-row>
+  </ion-item>
+</form>
